# Trabalho-Pratico-POO

./: Aparelhos.cpp  Aparelhos.h  CMakeLists.txt  Comandos.cpp  Comandos.h  Habitacao.cpp  Habitacao.h  Processador.cpp  Processador.h  PropriedadesAmbiente.cpp  PropriedadesAmbiente.h  README.md  Regra.cpp  Regra.h  Sensores.cpp  Sensores.h  Zona.cpp  Zona.h  curses.h  grupo.txt  main.cpp  utils.h
Consola/: POO - 2324 - Bibioteca POO Consola README.txt  Terminal.h  main.cpp
